Closed Bug 294134 Opened 21 years ago Closed 21 years ago

fix canvas premultiplied-alpha handling

Categories

(Core :: Graphics: Canvas2D, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: vlad, Assigned: vlad)

Details

Attachments

(1 file)

Cairo image surfaces are stored with premultiplied alpha; gfxIImageFrames are not. Patch fixes our handling of these two, to correctly premultiply/unpremultiply when going back and forth.
Attached patch canvas alpha fixSplinter Review
Patch. Also fixes initial surface clearing to fully transparent black as required by the spec.
Attachment #183569 - Flags: review?(pavlov)
Comment on attachment 183569 [details] [diff] [review] canvas alpha fix r=pavlov
Attachment #183569 - Flags: review?(pavlov) → review+
Fixed on trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
this caused further color regression in bug 293353
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: