b=294134, fix canvas premultiplied alpha handling, r=pavlov